--- a/src/styles/blocks/common.scss
+++ b/src/styles/blocks/common.scss
@@ -47,6 +47,7 @@ ul li {
   font-family: nuber-next, sans-serif;
   font-weight: 800;
   text-wrap-style: balance;
+  will-change: transform, opacity;
 
   @include media-breakpoint-down(lg) {
       font-size: 45px;
@@ -69,6 +70,7 @@ ul li {
   font-family: nuber-next, sans-serif;
   font-weight: 800;
   text-wrap-style: balance;
+  will-change: transform, opacity;
 
   @include media-breakpoint-down(lg) {
       font-size: 42px;
