--- a/src/styles/blocks/header.scss
+++ b/src/styles/blocks/header.scss
@@ -30,11 +30,7 @@
 
   &__nav {
       margin-left: auto;
-
-      &--open {
-          opacity: 1;
-          top: 100%;
-      }
+      will-change: transform, opacity;
   }
 
   &__list {
@@ -69,11 +65,12 @@
           height: 100vh;
           position: absolute;
           top: 0;
-          left: -100%;
+          left: 0;
           opacity: 0;
+          transform: translateX(-100%);
           background-color: rgba($dark, .8);
           backdrop-filter: blur(5px);
-          transition: opacity .3s, left .3s;
+          transition: opacity .3s, transform .3s;
           display: flex;
           align-items: flex-start;
           justify-content: center;
@@ -81,7 +78,7 @@
 
           &--open {
               opacity: 1;
-              left: 0;
+              transform: translateX(0);
           }
       }
 
