--- a/src/styles/blocks/header.scss
+++ b/src/styles/blocks/header.scss
@@ -65,12 +65,11 @@
           height: 100vh;
           position: absolute;
           top: 0;
-          left: 0;
+          left: -100%;
           opacity: 0;
-          transform: translateX(-100%);
           background-color: rgba($dark, .8);
           backdrop-filter: blur(5px);
-          transition: opacity .3s, transform .3s;
+          transition: opacity .3s, left .3s;
           display: flex;
           align-items: flex-start;
           justify-content: center;
@@ -78,7 +77,8 @@
 
           &--open {
               opacity: 1;
-              transform: translateX(0);
+              left: 0;
+              transition: opacity .3s, left .3s;
           }
       }
 
