--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -2,10 +2,41 @@
 @use 'blocks/**/*';
 
 .hero {
-    background-image: url('../assets/img/hero-bg.png');
-    background-repeat: no-repeat;
-    background-position: center;
-    background-size: cover;
+    position: relative;
+
+    &::before {
+        content: "";
+        display: block;
+        width: 100%;
+        height: 100%;
+        position: absolute;
+        top: 0;
+        left: 0;
+        background: radial-gradient(circle, rgba(15,14,15,0) 0%, rgba(15,14,15,1) 100%);
+        z-index: -1;
+    }
+
+    &::after {
+        content: "";
+        display: block;
+        width: 100%;
+        height: 100%;
+        position: absolute;
+        top: 0;
+        left: 0;
+        background: linear-gradient(180deg, rgba(15,14,15,0) 0%, rgba(15,14,15,1) 100%);
+        z-index: -2;
+    }
+    
+    &__video {
+        position: absolute;
+        top: 0;
+        left: 0;
+        width: 100vw;
+        height: 100vh;
+        object-fit: cover;
+        z-index: -3;
+    }
     
     &__content {
         height: 100vh;
@@ -39,11 +70,15 @@
     }
 
     @include media-breakpoint-down(sm) {
-        background-image: url('../assets/img/hero-bg-mob.png');
+        // background-image: url('../assets/img/hero-bg-mob.png');
         
         p {
             font-size: 18px;
             line-height: 24px;
+        }
+
+        &__video {
+            object-position: 70% 50%;
         }
     }
 }
